--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
       <div class="autocomplete"></div>
       <div id="summary"></div>
     </div>
+    <!--be aware of the order that you list the scripts in!--> 
     <script src="utils.js"></script>
+    <script src="autocomplete.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
